# py-kids-vc

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: fetch_kids_corpus.py
src/kids_vc/: cli.py  merge.py
tests/: test_xpdk2vc_compat.py  test_zwr_merge.py
